--- a/package.json
+++ b/package.json
@@ -6,18 +6,69 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "lint:format": "npm run lint && npm run format",
+    "lint:fix:format": "npm run lint:fix && npm run format"
   },
   "dependencies": {
-    "expo": "~51.0.26",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/slider": "^4.5.2",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
+    "@reduxjs/toolkit": "^2.2.7",
+    "@types/lodash": "^4.17.7",
+    "axios": "^1.7.4",
+    "eslint-plugin-react-native": "^4.1.0",
+    "expo": "~51.0.31",
+    "expo-av": "^14.0.7",
+    "expo-image": "~1.12.15",
+    "expo-image-picker": "^15.0.7",
+    "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.12.1",
+    "expo-vector-icons": "^10.0.1",
+    "formik": "^2.4.6",
+    "lodash": "^4.17.21",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-easy-grid": "^0.2.2",
+    "react-native-extended-stylesheet": "^0.12.0",
+    "react-native-gesture-handler": "^2.18.1",
+    "react-native-pager-view": "6.3.0",
+    "react-native-ratings": "^8.1.0",
+    "react-native-reanimated": "^3.15.1",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.31.1",
+    "react-native-super-grid": "^6.0.1",
+    "react-native-svg": "^15.2.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-toast-message": "^2.2.0",
+    "react-redux": "^9.1.2",
+    "yup": "^1.4.0",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@eslint/js": "^9.9.1",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "@typescript-eslint/eslint-plugin": "^8.3.0",
+    "@typescript-eslint/parser": "^8.3.0",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "eslint": "^8.57.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-react": "^7.35.0",
+    "globals": "^15.9.0",
+    "prettier": "3.3.3",
+    "typescript": "~5.3.3",
+    "typescript-eslint": "^8.3.0"
   },
   "private": true
 }
