--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,19 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "baseUrl": "./",
+    "paths": {
+      "@assets/*": ["src/assets/*"],
+      "@app-navigation/*": ["src/app-navigation/*"],
+      "@app-views/*": ["src/app-views/*"],
+      "@app-uikits/*": ["src/app-uikits/*"],
+      "@app-components/*": ["src/app-components/*"],
+      "@app-helper/*": ["src/app-helper/*"],
+      "@app-services/*": ["src/app-services/*"],
+      "@app-hooks/*": ["src/app-hooks/*"],
+      "@app-layout/*": ["src/app-layout/*"],
+      "@redux/*": ["src/redux/*"]
+    }
   }
 }
