--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint:fix:format": "npm run lint:fix && npm run format"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/slider": "^4.5.2",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
@@ -23,12 +23,14 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/themed": "^4.0.0-rc.8",
     "@types/lodash": "^4.17.7",
     "axios": "^1.7.4",
     "eslint-plugin-react-native": "^4.1.0",
-    "expo": "~51.0.31",
+    "expo": "^51.0.38",
     "expo-av": "^14.0.7",
-    "expo-image": "~1.12.15",
+    "expo-image": "^1.13.0",
     "expo-image-picker": "^15.0.7",
     "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.12.1",
@@ -37,21 +39,24 @@
     "lodash": "^4.17.21",
     "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-native": "0.74.5",
+    "react-dom": "^18.2.0",
+    "react-native": "^0.74.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-easy-grid": "^0.2.2",
+    "react-native-elements": "^3.4.3",
     "react-native-extended-stylesheet": "^0.12.0",
-    "react-native-gesture-handler": "^2.18.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-pager-view": "6.3.0",
     "react-native-ratings": "^8.1.0",
-    "react-native-reanimated": "^3.15.1",
-    "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^3.31.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-super-grid": "^6.0.1",
-    "react-native-svg": "^15.2.0",
+    "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
     "react-redux": "^9.1.2",
+    "reactotron-react-js": "^3.3.15",
     "yup": "^1.4.0",
     "zustand": "^4.5.4"
   },
@@ -67,6 +72,7 @@
     "eslint-plugin-react": "^7.35.0",
     "globals": "^15.9.0",
     "prettier": "3.3.3",
+    "reactotron-react-native": "^5.1.9",
     "typescript": "~5.3.3",
     "typescript-eslint": "^8.3.0"
   },
